--- a/azure_pipeline_ml.yml
+++ b/azure_pipeline_ml.yml
@@ -8,7 +8,9 @@ variables:
   databricks-host: 'https://adb-4188668828067310.10.azuredatabricks.net'
   notebook-folder: '/Users/tushar.pathak@tigeranalytics.com/'
   cluster-id: '0708-064558-lglz5exu'
-  notebook-name: 'Deepchecks_Model_Testing_v2'
+  notebook-name: 'Deepchecks_Model_Testing_v1'
+  html-report-workspace-path: '/Workspace/Users/tushar.pathak@tigeranalytics.com/Reports/Data_Integrity_Report.html'
+  local-html-report-path: '$(Build.ArtifactStagingDirectory)/Data_Integrity_Report.html'
 
 steps:
 - task: UsePythonVersion@0
@@ -82,20 +84,17 @@ steps:
     echo "$RESULT" | jq .
   displayName: 'Run Databricks Notebook'
 
-- task: JakubRumpca.azure-pipelines-html-report.PublishHtmlReport.PublishHtmlReport@1
-  displayName: 'Publish HTML Report'
-  condition: always()
-  inputs:
-    reportDir: '$(System.DefaultWorkingDirectory)/Reports'
-
-- task: PublishPipelineArtifact@1
-  displayName: 'Publish HTML Report to artifact'
-  condition: always()
-  inputs:
-    targetPath: '$(System.DefaultWorkingDirectory)/Reports'
-    artifact: 'ML HTML Report'
-
-
   env:
     DATABRICKS_TOKEN: 'dapi1062f3ecc6b393a6c5934704162792b4-3'
     DATABRICKS_HOST: $(databricks-host)
+
+- script: |
+    # Download the HTML report from Databricks workspace to local path
+    databricks workspace export $(html-report-workspace-path) $(local-html-report-path)
+  displayName: 'Download HTML report'
+
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(local-html-report-path)'
+    artifact: 'HTMLReport'
+  displayName: 'Publish HTML Report'
