--- a/azure_pipeline_ml.yml
+++ b/azure_pipeline_ml.yml
@@ -97,8 +97,8 @@ steps:
 
     # Download the HTML reports from Databricks workspace to local path
     IFS=$'\n'
-    for report_path in $html-report-paths; do  # Removed double quotes around $html-report-paths
-        report_name=$(basename "$report_path")
+    for report_path in $html-report-paths; do
+        report_name=$(basename "$report_path")  # Removed the problematic -r option
         databricks workspace export "$report_path" "$(local-html-report-path)/$report_name"
     done
   displayName: 'Download HTML reports'
